# ChangeLog for app-text/pdfjam
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/pdfjam/ChangeLog,v 1.22 2010/04/13 10:24:42 aballier Exp $

*pdfjam-2.01 (13 Apr 2010)

  13 Apr 2010; Alexis Ballier <aballier@gentoo.org> +pdfjam-2.01.ebuild:
  version bump, by Gian <news.gdc@nurfuerspam.de>, bug #314867

  20 Jan 2009; Alexis Ballier <aballier@gentoo.org> pdfjam-1.20.ebuild,
  pdfjam-1.20-r1.ebuild:
  assign RDEPEND to DEPEND

*pdfjam-1.21 (20 Jan 2009)

  20 Jan 2009; Alexis Ballier <aballier@gentoo.org> +pdfjam-1.21.ebuild:
  version bump, security fixes merged upstream

  18 Jan 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  pdfjam-1.20-r1.ebuild:
  ppc stable, bug #252734

  15 Jan 2009; Markus Meier <maekke@gentoo.org> pdfjam-1.20-r1.ebuild:
  amd64/x86 stable, bug #252734

*pdfjam-1.20-r1 (15 Jan 2009)

  15 Jan 2009; Alexis Ballier <aballier@gentoo.org>
  +files/pdfjam-1.20-security.patch, +pdfjam-1.20-r1.ebuild:
  Security fixes by Martin Väth for bug #252734

  10 Jun 2008; Alexis Ballier <aballier@gentoo.org> -pdfjam-1.10.ebuild:
  remove old

  10 Jun 2008; Alexis Ballier <aballier@gentoo.org> pdfjam-1.20.ebuild:
  depend on latex-base instead of tetex, bug #225315

  13 Aug 2007; Markus Rothe <corsair@gentoo.org> pdfjam-1.20.ebuild:
  Added ~ppc64

  12 Mar 2007; Alexandre Buisse <nattfodd@gentoo.org> metadata.xml:
  Replaced text-markup by tex as maintaining herd (text-markup split).

  05 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  24 Dec 2005; Michael Hanselmann <hansmi@gentoo.org> pdfjam-1.20.ebuild:
  Stable on ppc.

  10 Dec 2005; Simon Stelling <blubb@gentoo.org> pdfjam-1.20.ebuild:
  stable on amd64

  03 Dec 2005; Chris White <chriswhite@gentoo.org> pdfjam-1.20.ebuild:
  x86 stable for bug #114328.

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> pdfjam-1.10.ebuild:
  Stable on ppc.
