@@ -1,6 +1,11 @@
 # ChangeLog for app-text/pdfjam
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/pdfjam/ChangeLog,v 1.22 2010/04/13 10:24:42 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/pdfjam/ChangeLog,v 1.23 2010/04/29 09:37:19 aballier Exp $
+
+*pdfjam-2.05 (29 Apr 2010)
+
+  29 Apr 2010; Alexis Ballier <aballier@gentoo.org> +pdfjam-2.05.ebuild:
+  version bump, by August Hörandl <hoea@gmx.at>, bug #316831
 
 *pdfjam-2.01 (13 Apr 2010)
 
